# SimpleMMO-Bot

./: .gitignore  README.md  setup.cfg
simple_mmo_bot/: __main__.py
