[metadata]
name = SimpleMMO Bot
version = 0.0.0
description = A Simple MMO Bot 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
author = AJ
author_email = aj@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires = 
    selenium==4.2.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    simple-mmo = simple_mmo_bot.__main__:main
    sm         = simple_mmo_bot.__main__:main

[bdist_wheel]
universal = True